# restaurant_search/app/routes/restaurant.route.js
@@ -9,5 +9,9 @@ restaurantRoutes.get("/:id", restaurantController.getRestaurant)
 restaurantRoutes.post("/", restaurantController.createRestaurant)
 restaurantRoutes.delete("/:id", restaurantController.deleteRestaurant)
 restaurantRoutes.put("/:id", restaurantController.updateRestaurant)
-
+restaurantRoutes.get("/searchRestaurantViaRatings/:id", restaurantController.searchRestaurantViaRatings)
+restaurantRoutes.get("/searchRestaurantViaDistance/:id", restaurantController.searchRestaurantViaDistance)
+restaurantRoutes.get("/searchRestaurantViaCoordinates/:id", restaurantController.searchRestaurantViaCoordinates)
+restaurantRoutes.get("/searchRestaurantViaCuisine/:id", restaurantController.searchRestaurantViaCuisine)
+restaurantRoutes.get("/searchRestaurantViaBudget/:id", restaurantController.searchRestaurantViaBudget)
 module.exports = restaurantRoutes
